--- a/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
@@ -169,7 +169,7 @@
                 <div class="modal-dialog">
                     <!-- Modal content-->
                     <div class="modal-content">
-                        <div class="modal-header" style="padding:35px 50px;">
+                        <div id="main-modal-header" class="modal-header" style="padding:35px 50px;">
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
                             <h4 id="modal-title"></h4>
                         </div>
@@ -216,7 +216,7 @@
                                     <br />
                                 </div>
 
-                                <button id="update-singular-user-state" type="submit" class="btn btn-success btn-block"><span class="glyphicon glyphicon-floppy-disk"></span> Save & Update</button>
+                                <button id="update-singular-user-state" type="submit" class="btn btn-info btn-block"><span class="glyphicon glyphicon-floppy-disk"></span> Save & Update</button>
                             </form>
                         </div>
                         <!-- Modal Footer -->
