--- a/ABLCloudStaff/ABLCloudStaff/Views/Admin/Admin.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Admin/Admin.cshtml
@@ -25,6 +25,7 @@
     <script src="../../Scripts/add_location_form.js"></script>
     <script src="../../Scripts/add_location_autocomplete.js"></script>
     <script src="../../Scripts/remove_location_autocomplete.js"></script>
+    <script src="../../Scripts/link_modifier.js"></script>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://css-spinners.com/css/spinner/spinner.css" type="text/css">
     <link rel="stylesheet" href="../../Content/Site.css">
@@ -60,7 +61,7 @@
                 </button>
 
                 <div id="cloudstaff_title">
-                    <a href="/Home/Index" class="navbar-brand">
+                    <a href="/Home/Index" class="navbar-brand" id="redundant_link">
                         <span>
                             <img id="title_image" src="http://www.abacusbio.com/themes/abacusbio/assets/images/apple-touch-57x57-icon.png" width="25" height="25" />
                         </span>
