--- a/ABLCloudStaff/ABLCloudStaff/Views/LoginAdmin/LoginAdmin.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/LoginAdmin/LoginAdmin.cshtml
@@ -43,15 +43,15 @@
     }
     <div class="container-fluid">
         <div class="row">
-            <div class="col-xs-6 col-xs-offset-3 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
+            <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
                 <div class="well" id="login_form">
                     <!-- Login Form. -->
                     <form id="add-user-form" action="/LoginAdmin/Login" method="post" role="form">
                         <h3>Login</h3>
-                        <p>You must login to use the administration controls.</p>
+                        <p>Login to use the administration controls.</p>
                         <div class="form-group container">
                             <label for="username_input">Username</label>
-                            <input type="text" id="username_input" class="form-control" placeholder="CloudStaff1" name="username" required />
+                            <input type="text" id="username_input" class="form-control" placeholder="CloudStaff10" name="username" required />
                             <br />
                             <label for="password_input">Password</label>
                             <input type="password" id="password_input" class="form-control" placeholder="" name="password" required />
