jquery mobile added

--- a/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
@@ -15,12 +15,14 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../Content/bootstrap-switch.css">
     <link rel="stylesheet" href="../../Content/slider.css"/>
+    <link rel="stylesheet" href="../../Content/jquery.mobile-1.4.5.css" />
     <script src="../../Scripts/bootstrap-switch.min.js"></script>
     <script src="../../Scripts/swipe_to_change_status.js"></script>
-    <script type="text/javascript" src="../../Scripts/init_modal.js"></script>
+    <script src="../../Scripts/init_modal.js"></script>
     <script src="../../Scripts/bootstrap-slider.js"></script>
     <script src="../../Scripts/time_slider.js"></script>
     <script src="../../Scripts/link_modifier.js"></script>
+    <script src="../../Scripts/jquery.mobile-1.4.5.js"></script>
     <link rel="stylesheet" href="../../Content/Site.css">
 
     <!-- favicon from AbacusBio website -->
