--- a/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
@@ -14,11 +14,14 @@
     <script src="../../Scripts/jquery-ui.min.js"></script>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../Content/bootstrap-switch.css">
-    <link rel="stylesheet" href="../../Content/slider.css"/>
+    <link rel="stylesheet" href="../../Content/nouislider.css" />
+    <link rel="stylesheet" href="../../Content/nouislider.pips.css" />
+    <!--<link rel="stylesheet" href="../../Content/slider.css"/>-->
     <script src="../../Scripts/bootstrap-switch.min.js"></script>
     <script src="../../Scripts/swipe_to_change_status.js"></script>
+    <script src="../../Scripts/nouislider.js"></script>
     <script src="../../Scripts/init_modal.js"></script>
-    <script src="../../Scripts/bootstrap-slider.js"></script>
+    <!--<script src="../../Scripts/bootstrap-slider.js"></script>-->
     <script src="../../Scripts/time_slider.js"></script>
     <script src="../../Scripts/link_modifier.js"></script>
     <link rel="stylesheet" href="../../Content/Site.css">
