seed data changed back to production. bug fix for status and location deletion

--- a/ABLCloudStaff/ABLCloudStaff/Views/Admin/Admin.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Admin/Admin.cshtml
@@ -1,5 +1,4 @@
-﻿@model ABLCloudStaff.Models.Core
-
+﻿
 @{
     Layout = null;
 }
@@ -432,6 +431,7 @@
                                         <label for="edit-user-username">Username</label>
                                         <input id="edit-user-username" type="text" class="form-control" name="username" disabled="disabled" />
                                         <br />
+                                        <p>Password is only updated if you supply a new one.</p>
                                         <label for="edit-user-password">New Password</label>
                                         <input id="edit-user-password" type="password" class="form-control" name="password" disabled="disabled" />
                                         <label for="edit-user-password-check">Confirm New Password</label>
