Added day selection, though the ui is slow due to a dependence on serverside time range computaiton.

--- a/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
@@ -18,9 +18,9 @@
     <script src="../../Scripts/swipe_to_change_status.js"></script>
     <script src="../../Scripts/init_modal.js"></script>
     <script src="../../Scripts/mobile-range-slider.js"></script>
-    <script src="../../Scripts/time_slider.js"></script>
+    <script src="../../Scripts/datetime_selection.js"></script>
     <script src="../../Scripts/link_modifier.js"></script>
-    <script src="../../Scripts/datepicker.js"></script>
+    <!--<script src="../../Scripts/datepicker.js"></script>-->
     <link rel="stylesheet" href="../../Content/Site.css">
     <link rel="stylesheet" href="../../Content/mobile-range-slider.css" />
 
@@ -204,7 +204,7 @@
                                             <label for="time_slider">
                                                 Return 
                                                 <span class="glyphicon glyphicon-calendar"> </span>
-                                                <span class="glyphicon glyphicon-time"> </span> | 
+                                                <span class="glyphicon glyphicon-time"> </span> 
                                                 <span id="date_picker_val"> </span>
                                                 <span id="time_slider_val"> </span>
                                             </label>
@@ -223,7 +223,7 @@
                                             <p><font size="6"><span class="glyphicon glyphicon-calendar"></span></font></p>
                                         </div>
                                         <div class="col-xs-11">
-                                            <input type="text" class="form-control" placeholder="touch here..." id="datepicker" />
+                                            <input type="text" class="form-control" placeholder="touch here..." id="datepicker" name="returnDate" />
                                         </div>
                                     </div>
                                     <br />
