removed clientside dependencies (delivery of frameworks via cdn. new controller for sharepoint view)

--- a/ABLCloudStaff/ABLCloudStaff/Views/LoginAdmin/LoginAdmin.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/LoginAdmin/LoginAdmin.cshtml
@@ -9,11 +9,11 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="../../Scripts/jquery.min.js"></script>
+    <script src="../../Scripts/bootstrap.min.js"></script>
     <script src="../../Scripts/jquery-ui.min.js"></script>
     <script src="../../Scripts/admin_error_window.js"></script>
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../Content/bootstrap.min.css">
     <link rel="stylesheet" href="../../Content/Site.css">
     <link rel="stylesheet" href="../../Content/jquery-ui.min.css" />
 
@@ -51,7 +51,7 @@
                         <p>Login to use the administration controls.</p>
                         <div class="form-group container">
                             <label for="username_input">Username</label>
-                            <input type="text" id="username_input" class="form-control" placeholder="CloudStaff10" name="username" required />
+                            <input type="text" id="username_input" class="form-control" placeholder="" name="username" required />
                             <br />
                             <label for="password_input">Password</label>
                             <input type="password" id="password_input" class="form-control" placeholder="" name="password" required />
