--- a/ABLCloudStaff/ABLCloudStaff/Views/Admin/Admin.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Admin/Admin.cshtml
@@ -8,8 +8,8 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="../../Scripts/jquery.min.js"></script>
+    <script src="../../Scripts/bootstrap.min.js"></script>
     <script src="../../Scripts/jquery-ui.min.js"></script>
     <script src="../../Scripts/admin_error_window.js"></script>
     <script src="../../Scripts/remove-user_autocomplete.js"></script>
@@ -25,8 +25,8 @@
     <script src="../../Scripts/add_location_autocomplete.js"></script>
     <script src="../../Scripts/remove_location_autocomplete.js"></script>
     <script src="../../Scripts/link_modifier.js"></script>
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="http://css-spinners.com/css/spinner/spinner.css" type="text/css">
+    <link rel="stylesheet" href="../../Content/bootstrap.min.css">
+    <link rel="stylesheet" href="../../Content/spinner.css" type="text/css">
     <link rel="stylesheet" href="../../Content/Site.css">
     <link rel="stylesheet" href="../../Content/bootstrap-switch.css">
     <link rel="stylesheet" href="../../Content/jquery-ui.min.css"/>
